##
# Some utility files to be configured
##
SET(DOTIN          ${CMAKE_CURRENT_SOURCE_DIR}/dot.py.in)
SET(DOT            ${CMAKE_CURRENT_SOURCE_DIR}/dot.py)
CONFIGURE_FILE(${DOTIN} ${DOT} @ONLY)
INSTALL(FILES ${DOT} COMPONENT tests DESTINATION tests)

SET(DISTANCEIN          ${CMAKE_CURRENT_SOURCE_DIR}/distance.py.in)
SET(DISTANCE            ${CMAKE_CURRENT_SOURCE_DIR}/distance.py)
CONFIGURE_FILE(${DISTANCEIN} ${DISTANCE} @ONLY)
INSTALL(FILES ${DISTANCE} COMPONENT tests DESTINATION tests)

SET(KMEANSIN          ${CMAKE_CURRENT_SOURCE_DIR}/kmeans.py.in)
SET(KMEANS            ${CMAKE_CURRENT_SOURCE_DIR}/kmeans.py)
CONFIGURE_FILE(${KMEANSIN} ${KMEANS} @ONLY)
INSTALL(FILES ${KMEANS} COMPONENT tests DESTINATION tests)

INSTALL(FILES kmeansSIFT.py COMPONENT tests DESTINATION tests)
INSTALL(FILES kmeansHOG.py COMPONENT tests DESTINATION tests)
